Добавление функционала для postman

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,11 @@ services:
     image: localhost/calculator-php-fpm:latest
     restart: always
     container_name: calculator-php-fpm
+    environment:
+      X_API_KEY: ${X_API_KEY}
     volumes:
       - ./:/var/www/html
+      
 
   nginx:
     image: localhost/calculator-nginx:latest
@@ -17,7 +20,15 @@ services:
     environment:
       PHP_UPSTREAM_CONTAINER: php-fpm
       PHP_UPSTREAM_PORT: 9000
+      APP_WEB_PORT: ${APP_WEB_PORT}
     depends_on:
       - php-fpm
     volumes:
       - ./web:/var/www/html/web
+
+  swagger:
+    image: swaggerapi/swagger-ui:v5.16.2
+    environment:
+      URL: /swagger-ui/spec.yml
+    volumes:
+      - ./swagger/spec.yml:/usr/share/nginx/html/spec.yml
