--- a/docker/nginx/templates/default.conf.template
+++ b/docker/nginx/templates/default.conf.template
@@ -5,6 +5,7 @@ upstream php-upstream {
 server {
     server_name default_server;
     root /var/www/html/web;
+    resolver 127.0.0.11;
 
     listen 80;
     index index.php index.html;
@@ -26,5 +27,16 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_read_timeout 1000;
+    }
+
+    location ~ ^/swagger-ui$ {
+        return 301 $scheme://$host:${APP_WEB_PORT}$request_uri/;
+    }
+
+    location ~ ^/swagger-ui/(.*)$ {
+        proxy_pass http://swagger:8080/$1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
