Подключение к базе данных

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,16 @@
 # Порт веб-сервера
 APP_WEB_PORT=8077
 X_API_KEY='ddd'
+
+# Имя сервиса БД
+DB_HOST=mariadb
+# Имя БД
+DB_NAME=calculator
+# Пароль суперпользователя БД
+DB_ROOT_PASSWORD=secret
+# Порт сервиса БД
+DB_PORT=3306
+# Имя пользователя для приложения БД
+DB_USER=calculator
+# Пароль для пользователя приложения БД
+DB_PASSWORD=secret
