--- a/swagger/spec.yml
+++ b/swagger/spec.yml
@@ -11,7 +11,7 @@ info:
       - реестр типов сырья доствки
       - реестр стоимости доставки
     
-    Разработчик [{ваше_имя}]({ссылка_на_профиль_github})
+    Разработчик [{Виктория Перунова}]({https://github.com/ViktoriaPer})
 servers:
   - url: http://localhost:8077
     description: Сервер локального тестирования
