--- a/swagger/spec.yml
+++ b/swagger/spec.yml
@@ -103,7 +103,7 @@ paths:
       summary: Получить список месяцев
       responses:
         '200':
-          $ref: '#/components/responses/Month2SuccessfulResponse'
+          $ref: '#/components/responses/MonthSuccessfulResponse'
         '401':
           description: Авторизация не выполнена
 
@@ -114,7 +114,7 @@ paths:
       summary: Получить список тоннажей
       responses:
         '200':
-          $ref: '#/components/responses/Tonnages2SuccessfulResponse'
+          $ref: '#/components/responses/TonnagesSuccessfulResponse'
         '401':
           description: Авторизация не выполнена
 
@@ -125,7 +125,7 @@ paths:
       summary: Получить список типов сырья
       responses:
         '200':
-          $ref: '#/components/responses/Types2SuccessfulResponse'
+          $ref: '#/components/responses/TypesSuccessfulResponse'
         '401':
           description: Авторизация не выполнена
 
@@ -237,78 +237,32 @@ components:
                   50: 145
                   75: 136
                   100: 138
-
-    Month2SuccessfulResponse:
-      description: Успешный ответ
-      content:
-        application/json:
-          example:
-            - "январь"
-            - "февраль"
-            - "март"
-            - "апрель"
-            - "май"
-            - "июнь"
-            - "июль"
-            - "август"
-            - "сентябрь"
-            - "октябрь"
-            - "ноябрь"
-            - "декабрь"
-
-    Tonnages2SuccessfulResponse:
-      description: Успешный ответ
-      content:
-        application/json:
-          example:
-            - 25
-            - 50
-            - 75
-            - 100
-    Types2SuccessfulResponse:
-      description: Успешный ответ
-      content:
-        application/json:
-          example:
-            - "шрот"
-            - "соя"  
-            - "жмых"
     SuccessfulPrices2Response:
       description: |
         Успешный ответ в составе стоимости "price" и прайса "price_list" с выводом всех стоимостей по всем месяцам для выбранного типа сырья
       content:
         application/json:
           example:
-            price: 100
+            price: 103
             price_list:
-              жмых:
-                январь:
-                  25: 121
-                  50: 118
-                  75: 137
-                  100: 142
-                февраль:
-                  25: 137
-                  50: 121
-                  75: 124
-                  100: 131
-                август:
-                  25: 124
-                  50: 145
-                  75: 136
-                  100: 138
-                сентябрь:
-                  25: 137
-                  50: 147
-                  75: 143
-                  100: 112
-                октябрь:
-                  25: 122
-                  50: 143
-                  75: 112
-                  100: 117
-                ноябрь:
-                  25: 125
-                  50: 145
-                  75: 136
-                  100: 138  
+              шрот:
+                month: "январь"
+                tonnage: 25
+                price: 108
+
+                month: "январь"
+                tonnage: 50
+                price: 103
+
+                month: "январь"
+                tonnage: 75
+                price: 165
+
+                month: "январь"
+                tonnage: 100
+                price: 152
+
+                month: "февраль"
+                tonnage: 25
+                price: 189
+
